# steamScraper

./: CMakeLists.txt  README.md  main.cpp  steamReader.cpp  steamReader.h
include/: controller.h  includes.h  itemReader.h  parser.h  steamReader.h  telegramBot.h
src/: controller.cpp  itemReader.cpp  parser.cpp  steamReader.cpp  telegramBot.cpp
